--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Theme
-#remote_theme                : "mmistakes/minimal-mistakes"
+#remote_theme                : "mmistakes/minimal-mistakes@4.13.0"
 # theme: minimal-mistakes-jekyll
 remote_theme: "mmistakes/minimal-mistakes"
 minimal_mistakes_skin       : "default"
@@ -19,6 +19,7 @@ include:
 plugins:
   - jemoji
   - jekyll-remote-theme
+  - jekyll-include-cache
 
 # Collections
 collections:
